[package]
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "rclrs (ROS Client Library for Rust)"
homepage = "https://github.com/bresilla/rclrs"
license = "MIT"
name = "rclrs"
readme = "README.md"
repository = "https://github.com/bresilla/rclrs"
version = "0.1.0"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"

[build-dependencies]
lazy_static = "1.3.0"

[dev-dependencies]
# approx = "0.3"
# criterion = "0.3"
